fix(contract): delete variables in-between games